Fixed alignment issues

--- a/index.css
+++ b/index.css
@@ -18,7 +18,11 @@ main {
     max-width: 594px;
     max-height: 726px;
     background-color: #282726;
-    border: 5px solid red;
+
+    /* Used to fix center alignment issues with max-width */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 /* Header */
@@ -77,7 +81,6 @@ section.languages {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    border: 5px solid green;
     gap: 5px;
     max-width: 350px;
     margin-bottom: 36px;
